i18n of Copyright line to use locally correct numeric glyphs

BUG=613583
TEST=Switch to language with non-Arabic numerals (e.g., Persian), open
Settings > About or chrome://settings to view Copyright line. Check that
year is rendered with non-Arabic numerals.

Review-Url: https://codereview.chromium.org/1996993002
Cr-Commit-Position: refs/heads/master@{#396527}

Former-commit-id: 8d231d3546984ff7d4b22a8a97bd162b599f7e9f